--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -23,22 +23,23 @@
     </tbody>
   </table>
   <div>
-  <button   class="btn btn-success    centercf" >Add(+)</button>
+  <button   class="btn btn-success    centercf" (click)="showForm()">Add(+)</button>
  
-  <div  >
+  <div  [hidden]="!isFormShowable">
     <form>
   <div   class="w-50 mt-5">
     
-    <input type="text" class="form-control" id="name" placeholder="Your Name">
+    <input type="text" class="form-control" id="name" name="name"  [(ngModel)]="tempUser.name" placeholder="Your Name">
   </div>
   <div  class="w-50 mt-3">
     
-    <input type="text" class="form-control" id="lastName" placeholder="Your LastName">
+    <input type="text" class="form-control" id="lastName" name="familyName" [(ngModel)]="tempUser.familyName" placeholder="Your LastName">
   </div>
   <div  class="w-50 mt-3">
     
-    <input type="text" class="form-control" id="age" placeholder="Your Age">
+    <input type="text" class="form-control" id="age" name="age" [(ngModel)]="tempUser.age" placeholder="Your Age">
   </div>
 </form>
+
+<button   class="btn btn-warning   mt-3 w-50    " (click)="addUser()">Save</button>
 </div>
-<button   class="btn btn-warning   mt-3 w-50    " >Save</button>
